# gepa-rpc

./: .gitignore  CONTRIBUTING.md  README.md  data.py  package.json  plan.md  pyproject.toml
.gepa_test_run/: config.yaml
.github/workflows/: publish.yml
clients/typescript/: README.md  package-lock.json  package.json  tsconfig.json
clients/typescript/.gepa_test_run/: config.yaml  dataset.jsonl
clients/typescript/src/: gepa.ts  index.ts  models.ts  server.ts
clients/typescript/src/ai-sdk/: predict.ts  prompt.ts
clients/typescript/tests/: integration.test.ts
examples/ai_sdk/: package.json
examples/ai_sdk/judge_bench/: functional.ts  judge_bench_train.jsonl  subclass.ts
examples/ai_sdk/tickets/: ticket_classifier.ts
gepa_rpc/: adapter.py
tests/: classifier.py  labels.txt  langchain.py  test_server.py
